ocp4/mixed-ingress-nginx.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mixed-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/server-snippets: |
      add_header x-nginx-ingress $hostname;
    appprotect.f5.com/app-protect-policy: "nginx-ingress/basic-block"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "nginx-ingress/logconf"
    appprotect.f5.com/app-protect-security-log-destination: "syslog:server=10.1.1.4:514"
spec:
  tls:
    - hosts:
      - mixed.ingress.dc1.example.com
      # This assumes tls-secret exists and the SSL 
      # certificate contains a CN for foo.bar.com
      secretName: tls-secret
  rules:
  - host: mixed.ingress.dc1.example.com
    http:
      paths:
      - path: /viprion.ssvg
        pathType: Exact
        backend:
          serviceName: node-green
          servicePort: 80          
      - path: /
        pathType: Prefix
        backend:
          serviceName: node-blue
          servicePort: 80
